--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "manifest_version": 2,
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://www.bbcgoodfood.com/recipes/*"],
       "js": ["content.js"]
     }
   ],
